--- a/Tareas/Tarea1/T1_Index.html
+++ b/Tareas/Tarea1/T1_Index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Tarea </title>
+    <style>
+        p{
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <span><a href="../Index_Tareas.html">&lt;- Volver al Index de Tareas.</a></span>
@@ -11,8 +17,26 @@
     <hr>
     <center>
         <h3>Descripción de la tarea:</h3>
-        <p></p>
+        <p><h3>Investigar:</h3><br>
+            ¿Qué es un paradigma?
+            ¿Cuáles son los Paradigmas de los Lenguajes de
+            Programación?</p>
     </center>
     <hr>
+    <div class="container">
+        <p><u>Qué es Paradigma:</u>
+            Como paradigma denominamos todo aquel modelo, patrón o ejemplo que debe seguirse en determinada situación. La palabra, como tal, proviene del griego (parádeigma).<br>
+            En un sentido amplio, se refiere a una teoría o conjunto de teorías que sirve de modelo a seguir para resolver problemas o situaciones determinadas que se planteen. <br>
+            <u><i>Un paradigma de programación</i></u> es un estilo de desarrollo de programas. Es decir, un modelo para resolver problemas computacionales. Los lenguajes de programación, necesariamente, se encuadran en uno o varios paradigmas a la vez a partir del tipo de órdenes que permiten implementar, algo que tiene una relación directa con su sintaxis.
+        </p><br>
+        <p>Principales paradigmas en la programación:</p>
+        <ul>
+            <li>Imperativo. Los programas se componen de un conjunto de sentencias que cambian su estado. Son secuencias de comandos que ordenan acciones a la computadora.</li>
+            <li>Declarativo. Opuesto al imperativo. Los programas describen los resultados esperados sin listar explícitamente los pasos a llevar a cabo para alcanzarlos.</li>
+            <li>Lógico. El problema se modela con enunciados de lógica de primer orden.</li>
+            <li>Funcional. Los programas se componen de funciones, es decir, implementaciones de comportamiento que reciben un conjunto de datos de entrada y devuelven un valor de salida.</li>
+            <li>Orientado a objetos. El comportamiento del programa es llevado a cabo por objetos, entidades que representan elementos del problema a resolver y tienen atributos y comportamiento.</li>
+        </ul>
+    </div>
 </body>
 </html>
