--- a/Tareas/Tarea2/T2_Index.html
+++ b/Tareas/Tarea2/T2_Index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarea </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Tarea 2</title>
+    <style>
+        p{
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <span><a href="../Tarea1/T1_Index.html">&lt;- Anterior tarea</a></span>
@@ -12,8 +18,41 @@
     <hr>
     <center>
         <h3>Descripción de la tarea:</h3>
-        <p></p>
+        <p><h3>Investigar:</h3><br>
+             Definición de: lenguaje de programación<br>
+             Clasificación de los lenguajes de alto nivel<br>
+             Ejemplos de lenguajes:
+             a) interpretados,
+             b) compilados
+             c) orientados a objetos
+             d) funcionales</p>
     </center>
     <hr>
+    <div class="container">
+        <p><u><i>Definición de lenguaje de programación:</i></u>
+            Lenguaje de programación En informática, cualquier lenguaje artificial que puede utilizarse para definir una secuencia de instrucciones para su procesamiento por un ordenador o computadora. <br>
+            Es complicado definir qué es y qué no es un lenguaje de programación. Se asume generalmente que la traducción de las instrucciones a un código que comprende la computadora debe ser completamente sistemática. <br>
+            Normalmente es la computadora la que realiza la traducción.
+        </p>
+        <p><u><i>Lenguajes de alto nivel:</i></u>
+            Un lenguaje de programación de alto nivel se caracteriza por expresar los algoritmos de una manera adecuada a la capacidad cognitiva humana, en lugar de la capacidad con que los ejecutan las máquinas. Estos lenguajes permiten una máxima flexibilidad al programador a la hora de abstraerse o de ser literal.
+        </p>
+        <h5>Lenguajes de alto nivel más populares:</h5>
+        <ul>
+            <li>COBOL (Common Business Oriented Language).</li>
+            <li>FORTRAN (Formula Translation).</li>
+            <li>Pascal.</li>
+            <li>Visual Basic.NET.</li>
+            <li>C, C++, C#.</li>
+            <li>Erlang.</li>
+        </ul>
+        <u><i>Ejemplos de lenguajes:</i></u>
+        <ul style="list-style: lower-alpha;">
+            <li><u>Interpretados.</u> Ruby, Python y JavaScript.</li>
+            <li><u>Compilados.</u> C, C++, Java, Go y Rust.</li>
+            <li><u>Orientado a objetos.</u> C++, Objective C y Java.</li>
+            <li><u>Fucnionales.</u> Haskell, Miranda, R, Lisp, Scala.</li>
+        </ul>
+    </div>
 </body>
 </html>
