--- a/Tareas/Tarea4/T4_Index.html
+++ b/Tareas/Tarea4/T4_Index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarea </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Tarea 4</title>
 </head>
 <body>
     <span><a href="../Tarea3/T3_Index.html">&lt;- Anterior tarea</a></span>
@@ -12,8 +13,41 @@
     <hr>
     <center>
         <h3>Descripción de la tarea:</h3>
-        <p></p>
-    </center>
-    <hr>
+        <p> <h3>Del lenguaje de <u>Python</u> investigar:</h3><br>
+            Símbolos, sintaxis, esqueleto de los programas <br>
+            aplicación a descargar para editar y ejecutar <br>
+            a que tipo de paradigma pertenece <br>
+            Un ejemplo de un programa escrito en ese lenguaje</p>
+   </center>
+   <hr>
+   <div class="container">
+       <p><u><i>Símbolos, sintaxis, esqueleto de los programas:</i></u> <br>
+        <u>Simbolos:</u><br>
+            + SUMA <br>
+            - RESTA ó NEGACIÓN <br>
+            * MULTIPLICACIÓN <br>
+            ** EXPONENTE <br>
+            / DIVISIÓN <br>
+            // DIVISION ENTERA <br>
+            %  RESIDUO <br><br>
+        <u>Sintaxis:</u><br>
+        b = 12 <br>
+        c = (2 + 2 + 8) <br>
+        a = 'Hola' <br>
+        print (a) <br> <br>
+        <u>Esqueleto de los programas:</u> Al ser un lenguaje de script, no ocupa cuerpo.
+
+    </p>
+       <hr><p><u><i>Aplicación a descargar para editar y ejecutar:</i></u> <br>
+        <p>Se necesita descargar en <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a></p>
+    </p>
+       <hr><p><u><i>A que tipo de paradigma pertenece:</i></u>  programación orientada a objetos, programación imperativa y programación funcional. <br></p>
+       <hr><p><u><i>Un ejemplo de un programa escrito:</i></u> <br>
+        <u>Factorial:</u><br>
+        def factorial(n): <br>  
+    # single line to find factorial <br>
+    return 1 if (n==1 or n==0) else n * factorial(n - 1);  
+    </p>
+   </div>
 </body>
 </html>
