--- a/Tareas/Tarea5/T5_Index.html
+++ b/Tareas/Tarea5/T5_Index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarea </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Tarea 5</title>
 </head>
 <body>
     <span><a href="../Tarea4/T4_Index.html">&lt;- Anterior tarea</a></span>
@@ -12,8 +13,58 @@
     <hr>
     <center>
         <h3>Descripción de la tarea:</h3>
-        <p></p>
-    </center>
-    <hr>
+        <p> <h3>Del lenguaje de <u>Scheme</u> investigar:</h3><br>
+            Símbolos, sintaxis, esqueleto de los programas <br>
+            aplicación a descargar para editar y ejecutar <br>
+            a que tipo de paradigma pertenece <br>
+            Un ejemplo de un programa escrito en ese lenguaje</p>
+   </center>
+   <hr>
+   <div class="container">
+       <p><u><i>Símbolos, sintaxis, esqueleto de los programas:</i></u> <br>
+        <u>Simbolos:</u><br>
+        <pre>
+(+ (* 2 3) (- 3 (/ 12 3)))
+(+ 6 (- 3 (/ 12 3)))
+(+ 6 (- 3 4))
+(+ 6 -1)
+5
+        </pre>
+        <u>Sintaxis:</u><br>
+        <pre>
+'hola
+(symbol 'hola-que<>)
+(symbol->string 'hola-que<>)
+'mañana
+'lápiz ; posible usar acentos en los símbolos
+; pero sí en los comentarios
+(symbol? 'hola) ; #t
+(symbol? "hola") ; #f
+(symbol?  #f) ; #f
+(equal? 'hola 'hola)
+(equal? 'hola "hola")
+        </pre>
+        <u>Esqueleto de programa:</u><br>
+        <pre>
+; Hello World in Scheme
+
+(display "Hello, world!")
+(newline)
+        </pre>
+    </p>
+       <hr><p><u><i>Aplicación a descargar para editar y ejecutar:</i></u> <br>
+        Se necesita instalar el MIT Scheme en: <a href="http://www.gnu.org/software/mit-scheme/">http://www.gnu.org/software/mit-scheme/</a>
+    </p>
+       <hr><p><u><i>A que tipo de paradigma pertenece:</i></u> Multiplaradigma.<br></p>
+       <hr><p><u><i>Un ejemplo de un programa escrito:</i></u> <br>
+        <h3>Factorial:</h3><br>
+        <pre>
+(define (factorial n)
+(cond ((< n 0) #f)
+((<= n 1) 1)
+(else (* n (factorial (- n 1))))))
+        </pre>
+    </p>
+   </div>
 </body>
 </html>
