--- a/Tareas/Tarea9/T9_Index.html
+++ b/Tareas/Tarea9/T9_Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Tarea </title>
+    <title>Tarea 9</title>
 </head>
 <body>
     <span><a href="../Tarea8/T8_Index.html">&lt;- Anterior tarea</a></span>
@@ -79,7 +79,36 @@ public class Main9 {
     <hr>
     <center><h4>Código de Ruby</h4></center>
     <pre>
-        
+puts "Convertir pesos MX a: "
+puts "1.- Dolar"
+puts "2.- Euro"
+puts "3.- Yen Japones"
+puts "4.- Dolar Hong Kong"
+x=gets().to_i
+case x
+when 1
+puts "pesos MX desea convertir:"
+n=gets().to_i
+r=n/20
+puts "#{r} dolar(es)"
+when 2
+puts "pesos MX desea convertir:"
+n=gets().to_i
+r=n/23
+puts "#{r} Euro(s)"
+when 3
+puts "pesos MX desea convertir:"
+n=gets().to_i
+r=n/0.18
+puts "#{r} Yen japones"
+when 4
+puts "pesos MX desea convertir:"
+n=gets().to_i
+r=n/2.58
+puts "#{r} Dolar de Hong Kong"
+else 
+puts "Opcion no valida"
+end
     </pre>
 </body>
 </html>
