--- a/Tareas/Tarea10/T10_Index.html
+++ b/Tareas/Tarea10/T10_Index.html
@@ -40,7 +40,14 @@ public class Main10 {
     <hr>
     <center><h4>Código de Ruby</h4></center>
     <pre>
-        
+puts "Cantidad de numeros de la serie a mostrar: "
+n=gets().to_i
+p=1
+for i in (1..n)
+r=i**p
+p=p+2
+puts "#{r}"
+end
     </pre>
 </body>
 </html>
