--- a/Tareas/Tarea13/T13_Index.html
+++ b/Tareas/Tarea13/T13_Index.html
@@ -85,7 +85,27 @@ public class Main13 {
         <h4>Código de Ruby</h4>
     </center>
     <pre>
-
+puts "tamaño del vector: "
+n=gets().to_i
+a=Array.new(n)
+for i in (0...n)
+    puts "numero: "
+    a[i] = gets().to_i
+    end	
+    print("[ ")
+for i in(0...(n-1))
+    print("#{a[i]}, ")
+end
+print("#{a[i+1]} ]")
+print("numero a buscar: ")
+x = gets().to_i
+j=0
+for i in(0...n)
+    if(a[i]==x)then
+        j=j+1
+    end
+end 
+puts("\n\nEl numero a buscar es: #{x} \nVeces que aparece en el vector: #{j}")
     </pre>
 </body>
 
